--- a/styles/main.css
+++ b/styles/main.css
@@ -9,9 +9,10 @@ body {
 #p1 {
   margin-left: 700px;
   font-size: 25px;
+
 }
 #p2 {
   margin-left: 700px;
   font-size: 25px;
-  margin-top: 400px;
+  margin-bottom: 40px;
 }
