--- a/styles/main.css
+++ b/styles/main.css
@@ -9,10 +9,11 @@ body {
 #p1 {
   margin-left: 700px;
   font-size: 25px;
+  margin-top: 70px;
 
 }
 #p2 {
   margin-left: 700px;
   font-size: 25px;
-  margin-bottom: 40px;
+  
 }
