--- a/styles/main.css
+++ b/styles/main.css
@@ -7,13 +7,14 @@ body {
 }
 
 #p1 {
-  margin-left: 700px;
+
+  text-align: center;
   font-size: 25px;
-  
+
 
 }
 #p2 {
-  margin-left: 700px;
+  text-align: center;
   font-size: 25px;
   
 }
