--- a/styles/main.css
+++ b/styles/main.css
@@ -8,14 +8,14 @@ body {
 
 #p1 {
 
-  text-align: center;
-  margin-top: -50px;
+  margin-left: 710px;
+
   font-size: 25px;
 
 
 }
 #p2 {
-  text-align: center;
+ margin-left:710px;
   font-size: 25px;
   
 }
