--- a/styles/main.css
+++ b/styles/main.css
@@ -19,3 +19,11 @@ body {
   font-size: 25px;
   
 }
+#p3 {
+  text-align: center;
+  font-size:20px;
+}
+#p3 {
+  text-align: center;
+  font-size:15px;
+}
