--- a/styles/main.css
+++ b/styles/main.css
@@ -21,9 +21,11 @@ body {
 }
 #p3 {
   text-align: center;
-  font-size:20px;
+  font-size:24px;
+  font-weight: bold;
 }
-#p3 {
+#p4 {
   text-align: center;
-  font-size:15px;
+  font-size:20px;
+  font-weight: bold;
 }
