changing paragraph font

--- a/styles/main.css
+++ b/styles/main.css
@@ -25,7 +25,7 @@ body {
   font-weight: bold;
 }
 #p4 {
-  text-align: center;
+  margin-left: 700px;
   font-size:17px;
   font-weight: bold;
   text-align: justify;
