--- a/styles/main.css
+++ b/styles/main.css
@@ -30,3 +30,14 @@ body {
   font-weight: bold;
   text-align: justify;
 }
+#p5 {
+  text-align: center;
+  font-size:20px;
+  font-weight: bold;
+}
+#p6 {
+  margin-left: 610px;
+  font-size:17px;
+  font-weight: bold;
+  text-align: justify;
+}
