--- a/styles/main.css
+++ b/styles/main.css
@@ -20,7 +20,7 @@ body {
   
 }
 #p3 {
-  text-align: center;
+  text-align: justify;
   font-size:20px;
   font-weight: bold;
 }
@@ -31,7 +31,7 @@ body {
   text-align: justify;
 }
 #p5 {
-  text-align: center;
+  text-align: justify;
   font-size:20px;
   font-weight: bold;
 }
