--- a/styles/main.css
+++ b/styles/main.css
@@ -30,6 +30,8 @@ body {
   font-size:17px;
   font-weight: bold;
   text-align: justify;
+  margin-left: 700px;
+}
 }
 #p5 {
   text-align: justify;
