changing paragraph font

--- a/styles/main.css
+++ b/styles/main.css
@@ -29,8 +29,8 @@ body {
  
   font-size:17px;
   font-weight: bold;
-  text-align: justify;
-  margin-left: 400px;
+  text-align: center;
+  
 }
 }
 #p5 {
