--- a/styles/main.css
+++ b/styles/main.css
@@ -20,10 +20,10 @@ body {
   
 }
 #p3 {
-  text-align: justify;
+  text-align: center;
   font-size:20px;
   font-weight: bold;
-  
+  }
 #p4 {
  
   font-size:17px;
@@ -31,9 +31,9 @@ body {
   text-align: justify;
   
 }
-}
+
 #p5 {
-  text-align: justify;
+  text-align: center;
   font-size:20px;
   font-weight: bold;
 }
