changing paragraph font

--- a/styles/main.css
+++ b/styles/main.css
@@ -28,7 +28,7 @@ body {
  
   font-size:17px;
   font-weight: bold;
-  text-align: justify;
+ margin-left: 200px;
   
 }
 
@@ -41,5 +41,5 @@ body {
  
   font-size:17px;
   font-weight: bold;
-  text-align: justify;
+  margin-left: 200px;
 }
