--- a/styles/main.css
+++ b/styles/main.css
@@ -3,6 +3,7 @@ body {
 }
 #h1 {
  text-align:center ;
+ margin-top: 10px;
   
 }
 
@@ -26,7 +27,7 @@ body {
   }
 #p4 {
  
-  font-size:16px;
+  font-size:18px;
   font-weight: bold;
  margin-left: 200px;
   
@@ -39,7 +40,7 @@ body {
 }
 #p6 {
  
-  font-size:16px;
+  font-size:18px;
   font-weight: bold;
   margin-left: 200px;
 }
