--- a/styles/main.css
+++ b/styles/main.css
@@ -1,46 +1,22 @@
 body {
   background-image: url("HP_paper.gif");
 }
-#h1 {
- text-align:center ;
- margin-top: 90px;
-  
+#header {
+    background-color:black;
+    color:white;
+    text-align:center;
+    padding:5px;
 }
-
-#p1 {
-
-  margin-left: 722px;
-
-  font-size: 25px;
-
-
+#nav {
+    line-height:30px;
+    background-color:#eeeeee;
+    height:300px;
+    width:100px;
+    float:left;
+    padding:5px;        
 }
-#p2 {
- margin-left:722px;
-  font-size: 25px;
-  
-}
-#p3 {
-  text-align: center;
-  font-size:20px;
-  font-weight: bold;
-  }
-#p4 {
- 
-  font-size:15px;
-  font-weight: bold;
- margin-left: 350px;
-  
-}
-
-#p5 {
-  text-align: center;
-  font-size:20px;
-  font-weight: bold;
-}
-#p6 {
- 
-  font-size:15px;
-  font-weight: bold;
-  margin-left: 350px;
+#section {
+    width:350px;
+    float:left;
+    padding:20px;    
 }
