--- a/styles/main.css
+++ b/styles/main.css
@@ -9,8 +9,8 @@ body {
 }
 #nav {
     line-height:30px;
-    background-color:#eeeeee;
-    height:300px;
+    background-color:#808080;
+    height:400px;
     width:100px;
     float:left;
     padding:5px;        
