changes to code

--- a/styles/main.css
+++ b/styles/main.css
@@ -9,7 +9,7 @@ body {
 }
 #nav {
     line-height:60px;
-    background-color:#808080;
+    background-color:#8A2BE2;
     height:300px;
     width:100px;
     float:left;
