--- a/styles/main.css
+++ b/styles/main.css
@@ -9,7 +9,7 @@ body {
 }
 #nav {
     line-height:100px;
-    background-color:#C71585;
+    background-color:#BC8F8F;
     height:300px;
     width:150px;
     float:left;
