--- a/styles/main.css
+++ b/styles/main.css
@@ -14,11 +14,11 @@ a{
     
     background-color:#BC8F8F;
     height:500px;
-    width:300px;
+    width:305px;
     float:left;
     
 }
-#section {s
+#section {
     width:350px;
     float:left;
     padding:20px;    
