--- a/styles/main.css
+++ b/styles/main.css
@@ -21,7 +21,8 @@ a{
 #section {
     width:350px;
     float:left;
-    padding:20px;    
+    padding:20px; 
+    background-color: #808080;   
 }
 #p1
 {
