Reflection link addition change font15

--- a/styles/main.css
+++ b/styles/main.css
@@ -19,10 +19,10 @@ a{
     
 }
 #section {
-    width:350px;
-    float:left;
-    padding:20px; 
-    background-color: #808080;   
+    width:760px;
+    float:center;
+    padding:60px; 
+
 }
 #p1
 {
