--- a/styles/main.css
+++ b/styles/main.css
@@ -14,14 +14,14 @@ a{
     
     background-color:#BC8F8F;
     height:500px;
-    width:305px;
+    width:290px;
     float:left;
     
 }
 #section {
     width:760px;
     float:center;
-    padding:60px; 
+    padding:360px; 
 background-color: #808080;
 }
 #p1
@@ -29,10 +29,12 @@ background-color: #808080;
   font-size: 24px;
   color:black;
   font-weight: bold;
+  float:left;
 }
 #p2
 {
   font-size: 24px;
   color:black;
   font-weight: bold;
+  float:left;
 }
