Reflection link addition change font15

--- a/styles/main.css
+++ b/styles/main.css
@@ -19,10 +19,10 @@ a{
     
 }
 #section {
-    width:560px;
+    width:660px;
     float:center;
     padding:100px; 
-background-color: #808080;
+background-color: #d98cb3;
 }
 #p1
 {
