--- a/styles/main.css
+++ b/styles/main.css
@@ -39,3 +39,10 @@ background-color: white;
   font-weight: bold;
   float:left;
 }
+div.img
+{
+  margin:5px;
+  border:1px solid #777;
+  float:right;
+  width:180px;
+}
