--- a/styles/main.css
+++ b/styles/main.css
@@ -22,7 +22,7 @@ a{
     width:660px;
     float:center;
     padding:100px; 
-background-color: white;
+background-color: #e6e6ff;
 }
 
 #p1
@@ -43,5 +43,5 @@ background-color: white;
 #footer
 {
   background-color: #ac3973;
- 
+
 }
