Reflection link addition change fo

--- a/styles/main.css
+++ b/styles/main.css
@@ -24,7 +24,7 @@ a{
     float:center;
     padding:100px; 
 background-color: #e6e6ff;
-font-family: Times New Roman;
+font-family: Arial;
 text-color:red;
 }
 
