Reflection link addition change fo

--- a/styles/main.css
+++ b/styles/main.css
@@ -24,8 +24,8 @@ a{
     float:center;
     padding:100px; 
 background-color: #e6e6ff;
-font-family: Arial;
-text-color:red;
+background-image: url("ssn.jpg")
+
 }
 
 #p1
