Reflection link addition change fo

--- a/styles/main.css
+++ b/styles/main.css
@@ -24,7 +24,7 @@ a{
     float:center;
     padding:100px; 
 background-color: #e6e6ff;
-background-image: url("ssn.jpg")
+background-image: url("nn.jpg")
 
 }
 
