Reflection link addition change fo

--- a/styles/main.css
+++ b/styles/main.css
@@ -48,6 +48,6 @@ background-image: url("nn.jpg")
   background-color: #ac3973;
 padding:25px;
 clear:both;
-text-align: right;
+text-align: center;
 font-size: 15px;
 }
