--- a/styles/main.css
+++ b/styles/main.css
@@ -21,7 +21,7 @@ a{
 #section
 {
     width:850px;
-    float:center;
+    float:right;
     padding:100px; 
 background-color: #e6e6ff;
 background-image: url("nn.jpg")
