Reflection link addition change fo

--- a/styles/main.css
+++ b/styles/main.css
@@ -23,7 +23,7 @@ a{
     width:750px;
     float:right;
     padding:100px; 
-
+font-style: bold;
 background-image: url("nn.jpg");
 background-repeat:no-repeat;
 
