Reflection link addition change fo

--- a/styles/main.css
+++ b/styles/main.css
@@ -34,7 +34,7 @@ background-repeat:no-repeat;
     float:right;
     padding:100px; 
 font-style: bold;
-background-image: url("ssn.jpg");
+background-image: url("ui.png");
 background-repeat:no-repeat;
 
 }
