--- a/styles/main.css
+++ b/styles/main.css
@@ -36,6 +36,7 @@ background-repeat:no-repeat;
 font-style: bold;
 background-image: url("ui.png");
 background-repeat:no-repeat;
+text-align: left;
 
 }
 
