--- a/styles/main.css
+++ b/styles/main.css
@@ -24,7 +24,7 @@ a{
     float:right;
     padding:100px; 
 font-style: bold;
-background-image: url("nn.jpg");
+background-image: url("bv.jpg");
 background-repeat:no-repeat;
 
 }
