--- a/styles/main.css
+++ b/styles/main.css
@@ -24,7 +24,7 @@ a{
     float:right;
     padding:100px; 
 font-style: bold;
-background-image: url("bv.jpg");
+background-image: url("nn.jpg");
 background-repeat:no-repeat;
 
 }
@@ -34,7 +34,7 @@ background-repeat:no-repeat;
     float:right;
     padding:255px; 
 font-style: bold;
-background-image: url("ui.png");
+background-image: url("bv.png");
 background-repeat:no-repeat;
 text-align: left;
 
