--- a/styles/main.css
+++ b/styles/main.css
@@ -29,7 +29,11 @@ background-repeat:no-repeat;
 
 }
 
-
+#section1
+{
+background-image: url("bv.jpg");
+background-repeat:no-repeat;  
+}
 #p1
 {
   font-size: 24px;
