Reflection link addition change fo

--- a/styles/main.css
+++ b/styles/main.css
@@ -31,7 +31,7 @@ background-repeat:no-repeat;
 
 #section1
 {
-background-image: url("bv.jpg");
+background-image: url("ssn.jpg");
 background-repeat:no-repeat;  
 }
 #p1
