Reflection link addition change fo

--- a/styles/main.css
+++ b/styles/main.css
@@ -56,7 +56,7 @@ background-repeat:no-repeat;
 
 #footer
 {
-  background-color: #ac3973;
+  background-color: #000080;
 padding:25px;
 clear:both;
 text-align: center;
