--- a/styles/main.css
+++ b/styles/main.css
@@ -33,7 +33,7 @@ background-repeat:no-repeat;
 {
  width:1050px;
 float:right;
-   
+ padding:100px;   
 background-image: url("ssn.jpg");
 background-repeat:no-repeat;
 text-align: justify;
