--- a/styles/main.css
+++ b/styles/main.css
@@ -20,9 +20,9 @@ a{
 }
 #section
 {
-    width:950px;
-    float:center;
-    padding:100px; 
+    width:550px;
+    float:right;
+    
 font-style: bold;
 background-image: url("nn.jpg");
 background-repeat:no-repeat;
