--- a/styles/main.css
+++ b/styles/main.css
@@ -33,7 +33,7 @@ background-repeat:no-repeat;
 {
   width:650px;
     height:450px;
-  float: right  
+  float: right;
 background-image: url("ssn.jpg");
 background-repeat:no-repeat;
 text-align: justify;
