--- a/styles/main.css
+++ b/styles/main.css
@@ -36,7 +36,7 @@ background-repeat:no-repeat;
   float: right;
 background-image: url("ssn.jpg");
 background-repeat:no-repeat;
-text-align: center;
+text-align: justify;
 
 
 }
