--- a/styles/main.css
+++ b/styles/main.css
@@ -34,6 +34,7 @@ background-repeat:no-repeat;
   width:850px;
     height:650px;
   float: right;
+  padding:5px;
 background-image: url("ssn.jpg");
 background-repeat:no-repeat;
 text-align: justify;
