--- a/styles/main.css
+++ b/styles/main.css
@@ -24,6 +24,7 @@ a{
     height:450px;
   float: right;  
 font-style: bold;
+padding:10px;
 background-image: url("nn.jpg");
 background-repeat:no-repeat;
 
