--- a/styles/main.css
+++ b/styles/main.css
@@ -15,9 +15,10 @@ a{
 #nav {
     
     background-color:#BC8F8F;
-    
+    height:600px;
+    width:340px;
     float:left;
-    
+    position:relative;
 }
 #section
 {
