--- a/styles/main.css
+++ b/styles/main.css
@@ -20,12 +20,18 @@ a{
     float:left;
     position:relative;
 }
-#section
+#h2
 {
    
 font-style: bold;
 text-align: center;
 
+}
+p2
+{
+  font-style: bold;
+  float:center;
+text-align: justify;
 }
 
 #section1
@@ -55,7 +61,10 @@ text-align: justify;
   font-weight: bold;
   float:left;
 }
-
+#para
+{
+  float
+}
 #footer
 {
   background-color: #800000;
