--- a/styles/main.css
+++ b/styles/main.css
@@ -27,7 +27,27 @@ float:center;
 #p2
 {
 font-style: bold;
-margin-left: 10px;
+text-align: center;
+}
+#p3
+{
+font-style: bold;
+text-align: center;
+}
+#p4
+{
+font-style: bold;
+text-align: center;
+}
+#p5
+{
+font-style: bold;
+text-align: center;
+}
+#p6
+{
+font-style: bold;
+text-align: center;
 }
 
 #section1
