--- a/styles/main.css
+++ b/styles/main.css
@@ -27,27 +27,27 @@ float:center;
 #p2
 {
 font-style: bold;
-text-align: center;
+text-align: justify;
 }
 #p3
 {
 font-style: bold;
-text-align: center;
+text-align: justify;
 }
 #p4
 {
 font-style: bold;
-text-align: center;
+text-align: justify;
 }
 #p5
 {
 font-style: bold;
-text-align: center;
+text-align: justify;
 }
 #p6
 {
 font-style: bold;
-text-align: center;
+text-align: justify;
 }
 
 #section1
