--- a/styles/main.css
+++ b/styles/main.css
@@ -30,29 +30,28 @@ margin-bottom: 100px;
 font-style: bold;
 text-align: center;
 
-text-indent: 480px;
 
 }
 #p3
 {
 font-style: bold;
-text-indent: 480px;
+text-align: center;
 }
 #p4
 {
 font-style: bold;
 
-text-indent: 480px;
+text-align: center;
 }
 #p5
 {
 font-style: bold;
-text-indent: 480px;
+text-align: center;
 }
 #p6
 {
 font-style: bold;
-text-indent: 480px;
+text-align: center;
 }
 
 #section1
