new code changes

--- a/styles/main.css
+++ b/styles/main.css
@@ -29,24 +29,25 @@ margin-bottom: 100px;
 {
 font-style: bold;
 text-align: center;
-text-indent:-90px;
+text-indent:-150px;
 }
 #p3
 {
 font-style: bold;
 text-align: center;
+text-indent:-150px;
+}
 }
 #p4
 {
 font-style: bold;
-
 text-align: center;
 }
 #p5
 {
 font-style: bold;
 text-align: center;
-text-indent: 10px;
+
 }
 #p6
 {
