--- a/styles/main.css
+++ b/styles/main.css
@@ -8,7 +8,7 @@ a{
 #header {
     background-color:black;
     color:white;
-    text-align:center;
+    text-align:right;
     padding:5px;
 }
 #nav {
@@ -36,6 +36,7 @@ font-size: 20px;
 {
 font-style: bold;
 text-align: center;
+font-size: 20px;
 
 }
 
@@ -43,17 +44,22 @@ text-align: center;
 {
 font-style: bold;
 text-align: center;
+font-size: 20px;
+
 }
 #p5
 {
 font-style: bold;
 text-align: center;
+font-size: 20px;
 
 }
 #p6
 {
 font-style: bold;
 text-align: center;
+font-size: 20px;
+
 }
 
 #section1
