--- a/styles/main.css
+++ b/styles/main.css
@@ -10,6 +10,7 @@ a{
     color:white;
     text-align:right;
     padding:5px;
+
 }
 #nav {
     background-color:#BC8F8F;
@@ -24,6 +25,7 @@ font-style: bold;
 text-align: center;
 float:center;
 margin-bottom: 100px;
+font-size:30px;
 }
 #p2
 {
