new code changes

--- a/styles/main.css
+++ b/styles/main.css
@@ -19,6 +19,12 @@ a{
     float:left;
     position:relative;
 }
+.img1
+{
+  max-height: 100%;
+  height:auto;
+  float:right;
+}
 #h2
 {  
 font-style: bold;
