new code changes

--- a/styles/main.css
+++ b/styles/main.css
@@ -16,7 +16,7 @@ a{
     background-color:#BC8F8F;
     height:600px;
     width:340px;
-    float:left;
+    float:center;
     position:relative;
 }
 .img1
