--- a/styles/main.css
+++ b/styles/main.css
@@ -23,7 +23,7 @@ a{
 {
   max-height: 100%;
   height:auto;
-  float:center;
+  float:right;
   border-radius: 50%;
 
 }
@@ -32,7 +32,7 @@ a{
 font-style: bold;
 text-align: center;
 float:center;
-margin-bottom: 300px;
+margin-bottom: 250px;
 font-size:30px;
 }
 #p2
