--- a/styles/main.css
+++ b/styles/main.css
@@ -25,6 +25,9 @@ a{
   height:auto;
   float:right;
   border-radius: 50%;
+  border-style: solid;
+  border-width: 10px;
+  border-color: blue;
 
 }
 #h2
