new code changes

--- a/styles/main.css
+++ b/styles/main.css
@@ -27,7 +27,7 @@ a{
   border-radius: 50%;
   border-style: solid;
   border-width: 10px;
-  border-color: blue;
+  border-color: #BC8F8F;
 
 }
 #h2
