--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("HP_paper.gif");
+  background-image: url("images/HP_paper.gif");
 }
 
 a{
@@ -22,6 +22,7 @@ a{
 #section
 {
   background-color: #e6f2ff;
+  padding:20px;
 }
 .img1
 {
