new code changes

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("images/HP_paper.gif");
+  background-image: url("../HP_paper.gif");
 }
 
 a{
@@ -14,7 +14,7 @@ a{
 }
 #nav {
     background-color:#BC8F8F;
-    height:600px;
+    height:700px;
     width:340px;
     float:left;
     position:relative;
