new code changes

--- a/styles/main.css
+++ b/styles/main.css
@@ -16,9 +16,9 @@ a{
 #nav {
     background-color:#BC8F8F;
     height:600px;
-    width:340px;
+    width:330px;
     float:left;
-    
+    position:relative;
 }
 #section
 {
