--- a/styles/main.css
+++ b/styles/main.css
@@ -6,6 +6,10 @@ body {
 a{
   text-decoration: none;
 }
+ul
+{
+  list-style-type:none;
+}
 #header {
     background-color:black;
     color:white;
@@ -34,6 +38,7 @@ a{
   border-style: solid;
   border-width: 10px;
   border-color: #BC8F8F;
+
 
 }
 #h2
@@ -80,7 +85,6 @@ font-size: 20px;
 font-style: bold;
 text-align: center;
 font-size: 20px;
-
 }
 
 #section1
@@ -97,8 +101,6 @@ background-color: #e6f2ff;
   font-weight: bold;
   float:left;
   margin-bottom: 20px;
- 
-
 }
 
 #footer
