--- a/styles/main.css
+++ b/styles/main.css
@@ -40,7 +40,7 @@ li a:hover:not(.active) {
 #header {
     background-color:black;
     color:white;
-    text-align:right;
+    text-align:center;
     padding:5px;
 
 }
