--- a/styles/main.css
+++ b/styles/main.css
@@ -125,8 +125,9 @@ background-color: #e6f2ff;
 #footer
 {
   background-color: #800000;
-padding:200px;
+
 clear:both;
 text-align: center;
 font-size: 15px;
+background-image:url("images/city.jpeg");
 }
