adding one image

--- a/styles/main.css
+++ b/styles/main.css
@@ -125,7 +125,7 @@ background-color: #e6f2ff;
 #footer
 {
   background-color: #800000;
-
+padding:200px;
 clear:both;
 text-align: center;
 font-size: 15px;
