adding one image some change

--- a/styles/main.css
+++ b/styles/main.css
@@ -128,5 +128,5 @@ padding:200px;
 clear:both;
 text-align: center;
 font-size: 15px;
-background-image:url("images/city.jpeg");
+background-image:url("city.jpeg");
 }
