--- a/styles/main.css
+++ b/styles/main.css
@@ -128,6 +128,6 @@ padding:200px;
 clear:both;
 text-align: center;
 font-size: 15px;
-background-image:url("city.jpeg");
+background-image:url("bb.jpeg");
 background-repeat: no-repeat;
 }
