--- a/styles/main.css
+++ b/styles/main.css
@@ -130,4 +130,6 @@ text-align: center;
 font-size: 15px;
 background-image:url("bb.jpg");
 background-repeat: no-repeat;
+max-width:100%;
+height:auto;
 }
