--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,9 @@
 body {
 
-  background-color:white;
+  background-image:url("bb.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  
 }
 
 a{
