--- a/styles/main.css
+++ b/styles/main.css
@@ -1,9 +1,10 @@
 body {
 
   background-image:url("bb.jpg");
-  background-repeat: no-repeat;
+  background-repeat:no-repeat;
   background-position: center;
-
+max-width: 100%;
+height:auto;
 }
 
 a{
