--- a/styles/main.css
+++ b/styles/main.css
@@ -16,12 +16,13 @@ height:auto;
     font-size: 16px;
     border: none;
     cursor: pointer;
-   
+
 }
 
 .dropdown {
     position: relative;
     display: inline-block;
+    float:left;
 }
 
 .dropdown-content {
