--- a/styles/main.css
+++ b/styles/main.css
@@ -55,27 +55,23 @@ height:auto;
 
 .dropdown-content1 {
     display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    
 }
 
 .dropdown-content1 a {
-    color: black;
-    padding-right: 12px 16px;
-    text-decoration: none;
-    display: block;
+   
 }
 
-.dropdown-content1 a:hover {background-color: #f1f1f1}
+.dropdown-content1 a:hover {
+  
+}
 
 .dropdown:hover .dropdown-content1 {
-    display: block;
+   
 }
 
 .dropdown:hover .dropbtn {
-    background-color: #3e8e41;
+   
 }
 
 
