--- a/styles/main.css
+++ b/styles/main.css
@@ -3,8 +3,8 @@ body {
   background-image:url("bb.jpg");
   background-repeat:no-repeat;
   background-position: center;
-  background-size:cover;
-
+ 
+max-width: 100%;
 padding:20px;
 }
 
