--- a/styles/main.css
+++ b/styles/main.css
@@ -172,7 +172,7 @@ background-color: #e6f2ff;
 clear:both;
 text-align: center;
 font-size: 15px;
-
+padding:20px;
 max-width:100%;
 max-height:30px;
 }
