--- a/styles/main.css
+++ b/styles/main.css
@@ -1,11 +1,11 @@
 body {
 
- background-color:blue;
+  background-image:url("bv.jpg");
   background-repeat:no-repeat;
   background-position: center;
   background-size:cover;
 max-width: 100%;
-padding:20px;
+
 }
 
     
@@ -172,6 +172,7 @@ background-color: #e6f2ff;
 clear:both;
 text-align: center;
 font-size: 15px;
-padding:2px;
 
+max-width:100%;
+max-height:30px;
 }
