--- a/styles/main.css
+++ b/styles/main.css
@@ -1,11 +1,10 @@
-body {
-
+body{
   background-image:url("bv.jpg");
   background-repeat:no-repeat;
   background-position: center;
   background-size:cover;
 max-width: 100%;
-
+height:auto;
 }
 
     
