--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,6 @@
-body{
-  background-image:url("bv.jpg");
+body {
+
+  background-image:url("bb.jpg");
   background-repeat:no-repeat;
   background-position: center;
   background-size:cover;
@@ -49,33 +50,6 @@ height:auto;
     background-color: #3e8e41;
 }
 
-
-
-
-.dropdown-content1 {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-}
-
-.dropdown-content1 a {
-    color: black;
-    padding-right: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-
-.dropdown-content1 a:hover {background-color: #f1f1f1}
-
-.dropdown:hover .dropdown-content1 {
-    display: block;
-}
-
-.dropdown:hover .dropbtn {
-    background-color: #3e8e41;
-}
 
 
 
@@ -164,7 +138,7 @@ background-color: #e6f2ff;
   font-weight: bold;
   float:left;
   margin-bottom: 20px;
-};
+}
 #footer
 {
 
@@ -173,5 +147,5 @@ text-align: center;
 font-size: 15px;
 
 max-width:100%;
-max-height:30px;
+height:auto;
 }
