--- a/styles/main.css
+++ b/styles/main.css
@@ -41,9 +41,39 @@ height:auto;
     display: block;
 }
 
-.dropdown-content a:hover {background-color: #f1f1f1}
+.dropdown-content a:hover {background-color: #f1f1f1
+}
 
 .dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown:hover .dropbtn {
+    background-color: #3e8e41;
+}
+
+
+
+.dropdown-content1 {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
+.dropdown-content1 a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    float:right;
+}
+
+.dropdown-content1 a:hover {background-color: #f1f1f1
+}
+
+.dropdown:hover .dropdown-content1 {
     display: block;
 }
 
