--- a/styles/main.css
+++ b/styles/main.css
@@ -64,7 +64,7 @@ height:auto;
 
 .dropdown-content1 a {
     color: black;
-    padding: 12px 16px;
+    padding-right: 12px 16px;
     text-decoration: none;
     display: block;
     float:right;
