--- a/styles/main.css
+++ b/styles/main.css
@@ -22,7 +22,7 @@ height:auto;
 
 .dropdown {
     position: relative;
-    display: inline-block;
+    
     float:left;
 }
 
@@ -31,7 +31,7 @@ height:auto;
     position: absolute;
     background-color: #f9f9f9;
     min-width: 160px;
-    
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
 
 .dropdown-content a {
