--- a/styles/main.css
+++ b/styles/main.css
@@ -38,14 +38,14 @@ height:auto;
     color: black;
     padding: 12px 16px;
     text-decoration: none;
-    
+    display: block;
 }
 
 .dropdown-content a:hover {background-color: #f1f1f1
 }
 
 .dropdown:hover .dropdown-content {
-    
+   
 
 }
 
