--- a/styles/main.css
+++ b/styles/main.css
@@ -36,10 +36,9 @@ height:auto;
 
 .dropdown-content a {
     color: black;
-    padding: -25px 36px 5px 5px;
+    padding: 12px 16px;
     text-decoration: none;
     display: block;
-margin-left:-30px;
 }
 
 .dropdown-content a:hover {background-color: #f1f1f1
@@ -67,10 +66,11 @@ margin-left:-30px;
 
 .dropdown-content1 a {
     color: black;
-    padding-right: 5px ;
+   padding: 12px 16px;
     text-decoration: none;
     display: block;
     float:right;
+    margin-right: 30px;
 }
 
 .dropdown-content1 a:hover {background-color: #f1f1f1
@@ -78,7 +78,7 @@ margin-left:-30px;
 
 .dropdown:hover .dropdown-content1 {
     display: block;
-float:right;
+
 }
 
 .dropdown:hover .dropbtn {
