--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,6 @@
 body {
 
-  background-color:black;
+  background-color:white;
   background-repeat:no-repeat;
   background-position: center;
   background-size:cover;
