changes to code reflection

--- a/styles/main.css
+++ b/styles/main.css
@@ -126,7 +126,7 @@ font-size: 20px;
   padding:20px;
 float:left;
 font-style: bold;
-text-align: justify;
+text-align: left;
 background-color: #e6f2ff;
 }
 #p1
