--- a/styles/main.css
+++ b/styles/main.css
@@ -70,7 +70,7 @@ height:auto;
     position:relative;
 }
 #nav1{
-  float:right;
+  float:center;
   margin-right: 100px;
  margin-top: 10px;
 
@@ -145,7 +145,7 @@ background-color: #e6f2ff;
   float:left;
   margin-bottom: 20px;
 }
-#footer
+#sec
 {
 
 clear:both;
