--- a/styles/main.css
+++ b/styles/main.css
@@ -66,7 +66,7 @@ height:auto;
     background-color:#BC8F8F;
     height:600px;
     width:340px;
-    float:left;
+    float:right;
     position:relative;
 }
 #nav1{
