changes to code index

--- a/styles/main.css
+++ b/styles/main.css
@@ -132,8 +132,7 @@ font-size: 20px;
   
 float:center;
 font-style: bold;
-width:900px;
-height:900px;
+margin-left: 100px;
 background-color: #e6f2ff;
 
 }
