--- a/styles/main.css
+++ b/styles/main.css
@@ -138,7 +138,7 @@ margin-left: 50px;
 margin-right: 50px;
 background-color: #e6f2ff;
 margin-top:150px;
-text-align: left;
+text-align: center;
 text-indent:50px;
 }
 #p1
