--- a/styles/main.css
+++ b/styles/main.css
@@ -97,6 +97,12 @@ margin-bottom: 80px;
 font-size:30px;
 color:#BC8F8F;
 }
+#h3{
+  position:absolute;
+  top:200px;
+  left:0;
+  width:100%;
+}
 #p2
 {
 font-style: bold;
