--- a/styles/main.css
+++ b/styles/main.css
@@ -150,7 +150,7 @@ text-indent:50px;
 #p1
 {
   font-size: 24px;
-  color:black;
+  color:00ff00;
   font-weight: bold;
   float:left;
   margin-bottom: 20px;
