changes to code index

--- a/styles/main.css
+++ b/styles/main.css
@@ -66,7 +66,8 @@ li{
   list-style-type: none;
   text-decoration: none;
 }
-li a:hover{
+
+.section li a:hover{
 color:yellow;
 text-decoration:underline;
 background-color: transparent;
