changes to code index

--- a/styles/main.css
+++ b/styles/main.css
@@ -67,7 +67,7 @@ li{
   text-decoration: none;
 }
 
-.section li a:hover{
+.img1 li a:hover{
 color:yellow;
 text-decoration:underline;
 background-color: transparent;
