--- a/styles/main.css
+++ b/styles/main.css
@@ -17,6 +17,7 @@ height:auto;
     font-size: 16px;
     border: none;
     cursor: pointer;
+    float:left;
 
 }
 
@@ -24,7 +25,7 @@ height:auto;
     position: relative;
     display: inline-block;
     float:left;
-    width:100%;
+
 }
 
 .dropdown-content {
