--- a/styles/main.css
+++ b/styles/main.css
@@ -186,26 +186,26 @@ position:relative;
 #division1
 {
 
-   background-color: red;
+   color: red;
     -webkit-animation-name: example; /* Chrome, Safari, Opera */
-    -webkit-animation-duration: 4s; /* Chrome, Safari, Opera */
-    
+    -webkit-animation-duration: 10s; /* Chrome, Safari, Opera */
+
     animation-name: example;
-    animation-duration: 4s;
+    animation-duration: 10s;
 }
 
 /* Chrome, Safari, Opera */
 @-webkit-keyframes example {
-    0%   {background-color: red;}
-    25%  {background-color: yellow;}
-    50%  {background-color: blue;}
-    100% {background-color: green;}
+    0%   {color: red;}
+    25%  {color: yellow;}
+    50%  {color: blue;}
+    100% {color: green;}
 }
 
 /* Standard syntax */
 @keyframes example {
-    0%   {background-color: red;}
-    25%  {background-color: yellow;}
-    50%  {background-color: blue;}
-    100% {background-color: green;}
+    0%   {color: red;}
+    25%  {color: yellow;}
+    50%  {color: blue;}
+    100% {color: green;}
 }
