--- a/styles/main.css
+++ b/styles/main.css
@@ -17,15 +17,11 @@ height:auto;
     font-size: 16px;
     border: none;
     cursor: pointer;
-    
-
 }
 
 .dropdown {
     position: relative;
     display: inline-block;
-    
-
 }
 
 .dropdown-content {
@@ -43,20 +39,15 @@ height:auto;
     display: block;
 }
 
-.dropdown-content a:hover {background-color: #f1f1f1
-}
+.dropdown-content a:hover {background-color: #f1f1f1}
 
 .dropdown:hover .dropdown-content {
     display: block;
-    
 }
 
 .dropdown:hover .dropbtn {
     background-color: #3e8e41;
-
 }
-
-
 #header {
     background-color:black;
     color:white;
