--- a/styles/main.css
+++ b/styles/main.css
@@ -22,7 +22,7 @@ height:auto;
 .dropdown {
     position: relative;
     display: inline-block;
-    padding:5px;
+    padding:1px;
 }
 
 .dropdown-content {
@@ -169,7 +169,7 @@ clear:both;
 text-align: center;
 font-size: 15px;
 position:relative;
-
+margin-top:5px;
 }
 #division{
  width:100%;
