--- a/styles/main.css
+++ b/styles/main.css
@@ -156,6 +156,18 @@ margin-top:50px;
 text-align: center;
 text-indent:50px;
 }
+#section2
+{
+  
+float:center;
+font-style: bold;
+margin-left: 50px;
+margin-right: 50px;
+background-color: #e6f2ff;
+margin-top:100px;
+text-align: center;
+text-indent:50px;
+}
 #p1
 {
  text-align: center;
