--- a/styles/main.css
+++ b/styles/main.css
@@ -183,6 +183,13 @@ font-size: 15px;
 position:relative;
 margin-top:40px;
 }
+new{
+clear:both;
+text-align: center;
+font-size: 15px;
+position:relative;
+margin-top:80px;  
+}
 #division{
  width:100%;
  float:left;
