--- a/styles/main.css
+++ b/styles/main.css
@@ -73,7 +73,7 @@ background-color: transparent;
 }
 
 #nav {
-    background-color:#00ff00;
+    color:#00ff00;
     height:600px;
     width:340px;
     float:right;
