--- a/styles/main.css
+++ b/styles/main.css
@@ -56,7 +56,7 @@ height:auto;
     padding:5px;
 
 }
-li{
+#p1.li{
   list-style-type: none; 
    color:#00ff00;
 }
@@ -66,7 +66,7 @@ li{
    color:#00ff00;
 }
 
- #p1.li a:hover{
+ li a:hover{
 color:#FFFF00;
 
 background-color: transparent;
@@ -167,7 +167,7 @@ text-indent:50px;
 {
  text-align: center;
  font-size: 30px;
-color:#00ff00;
+
 }
 #sec
 {
