--- a/styles/main.css
+++ b/styles/main.css
@@ -8,8 +8,7 @@ max-width: 100%;
 height:auto;
 
 }
-
-    
+  
 .dropbtn {
     background-color: #4CAF50;
     color: white;
@@ -56,33 +55,30 @@ height:auto;
     padding:5px;
 
 }
-section li{
+ul li{
   list-style-type: none; 
    color:#1aff1a;
 
 }
-section li a:link{
+ul li a:link{
   list-style-type: none;
   text-decoration: none;
    color:#00ff00;
 }
 
-section li a:hover{
+ul li a:hover{
 color:#FFFF00;
 
 background-color: transparent;
 }
 
-
 #nav1{
   float:right;
   margin-right: 20px;
-
   
 }
 #section
 {
-  
   padding:10px;
 }
 .img1
@@ -107,38 +103,6 @@ color:#BC8F8F;
   top:500px;
   left:0;
   width:100%;
-}
-#p2
-{
-font-style: bold;
-text-align: center;
-font-size: 20px;
-}
-#p3
-{
-font-style: bold;
-text-align: center;
-font-size: 20px;
-
-}
-#p4
-{
-font-style: bold;
-text-align: center;
-font-size: 20px;
-}
-#p5
-{
-font-style: bold;
-text-align: center;
-font-size: 20px;
-
-}
-#p6
-{
-font-style: bold;
-text-align: center;
-font-size: 20px;
 }
 #section1
 {
@@ -168,11 +132,9 @@ text-indent:50px;
 {
  text-align: center;
  font-size: 30px;
-
 }
 #sec
 {
-
 clear:both;
 text-align: center;
 font-size: 15px;
@@ -185,7 +147,6 @@ text-align: center;
 font-size: 15px;
 position:relative;
 margin-top:40px;  
-
 }
 #division{
  width:100%;
@@ -197,11 +158,11 @@ margin-top:40px;
    color: #00ff00;
     -webkit-animation-name: example; /* Chrome, Safari, Opera */
     -webkit-animation-duration: 5s; /* Chrome, Safari, Opera */
--webkit-animation-iteration-count: 5;/* Chrome, Safari, Opera */
+    -webkit-animation-iteration-count: 5;/* Chrome, Safari, Opera */
 
     animation-name: example;
     animation-duration: 5s;
-animation-iteration-count: 5;
+    animation-iteration-count: 5;
 }
 
 /* Chrome, Safari, Opera */
