--- a/styles/main.css
+++ b/styles/main.css
@@ -55,18 +55,18 @@ height:auto;
     padding:5px;
 
 }
-ul li{
+ li{
   list-style-type: none; 
    color:#1aff1a;
 
 }
-ul li a:link{
+ li a:link{
   list-style-type: none;
   text-decoration: none;
    color:#00ff00;
 }
 
-ul li a:hover{
+ li a:hover{
 color:#FFFF00;
 
 background-color: transparent;
