wireframe image add

--- a/styles/main.css
+++ b/styles/main.css
@@ -129,6 +129,16 @@ margin-top:100px;
 text-align: center;
 text-indent:50px;
 }
+#section3
+{
+  
+float:center;
+font-style: bold;
+background-color: #e6f2ff;
+margin-top:100px;
+text-align: center;
+text-indent:50px;
+}
 #p1
 {
  text-align: center;
