link hover active

--- a/styles/main.css
+++ b/styles/main.css
@@ -57,7 +57,7 @@ height:auto;
 }
  li{
   list-style-type: none; 
-   color:#1aff1a;
+   color:#00ff00;
 
 }
  li a:link{
@@ -65,13 +65,22 @@ height:auto;
   text-decoration: none;
    color:#00ff00;
 }
-
+li a:visited{
+list-style-type: none;
+  text-decoration: none;
+   color:#00ff00;
+ }
  li a:hover{
+
 color:#FFFF00;
 
 background-color: transparent;
 }
-
+li a:active{
+list-style-type: none;
+  text-decoration: none;
+   color:#00ff00;
+ }
 #nav1{
   float:right;
   margin-right: 20px;
@@ -126,7 +135,7 @@ margin-left: 50px;
 margin-right: 50px;
 background-color: #e6f2ff;
 margin-top:100px;
-text-align: justify;
+text-align: center;
 text-indent:50px;
 }
 
