link hover active

--- a/styles/main.css
+++ b/styles/main.css
@@ -4,8 +4,8 @@ body {
   background-repeat:no-repeat;
   background-position: center;
   background-size:cover;
-max-width: 100%;
-height:auto;
+  max-width: 100%;
+  height:auto;
 
 }
   
@@ -37,6 +37,7 @@ height:auto;
     padding: 3px 5px;
     text-decoration: none;
     display: block;
+    top:0px;
 }
 
 .dropdown-content a:hover {background-color: #f1f1f1}
