--- a/styles/main.css
+++ b/styles/main.css
@@ -22,6 +22,7 @@ body {
     position: relative;
     display: inline-block;
     padding:1px;
+     top:0px;
 }
 
 .dropdown-content {
@@ -30,6 +31,7 @@ body {
     background-color: #f9f9f9;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+     top:0px;
 }
 
 .dropdown-content a {
@@ -40,14 +42,19 @@ body {
     top:0px;
 }
 
-.dropdown-content a:hover {background-color: #f1f1f1}
+.dropdown-content a:hover {
+  background-color: #f1f1f1;
+   top:0px;
+}
 
 .dropdown:hover .dropdown-content {
     display: block;
+     top:0px;
 }
 
 .dropdown:hover .dropbtn {
     background-color: #3e8e41;
+     top:0px;
 }
 #header {
     background-color:black;
