--- a/styles/main.css
+++ b/styles/main.css
@@ -56,6 +56,19 @@ body {
     background-color: #3e8e41;
      
 }
+@media only screen and (max-width: 480px)
+{
+  
+ .dropbtn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 7px;
+    font-size: 8px;
+    border: none;
+    cursor: pointer;
+}
+ 
+}
 #header {
     background-color:black;
     color:white;
