--- a/styles/main.css
+++ b/styles/main.css
@@ -58,12 +58,23 @@ body {
 }
 @media only screen and (max-width: 480px)
 {
-  
+
  .dropbtn {
     background-color: #4CAF50;
     color: white;
-    padding: 7px;
-    font-size: 8px;
+    padding: 10px;
+    font-size: 10px;
+    border: none;
+    cursor: pointer;
+}
+@media only screen and (max-width: 600px)
+{
+
+ .dropbtn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 13px;
+    font-size: 12px;
     border: none;
     cursor: pointer;
 }
