--- a/styles/main.css
+++ b/styles/main.css
@@ -17,6 +17,15 @@ body {
     border: none;
     cursor: pointer;
 }
+@media only screen and (max-width:600px)
+{
+  background-color: #4CAF50;
+    color: white;
+    padding: 10px;
+    font-size: 8px;
+    border: none;
+    cursor: pointer;
+}
 
 .dropdown {
     position: relative;
