--- a/styles/main.css
+++ b/styles/main.css
@@ -17,15 +17,7 @@ body {
     border: none;
     cursor: pointer;
 }
-@media only screen and (max-width:480px)
-{
-  background-color: #4CAF50;
-    color: white;
-    padding: 10px;
-    font-size: 8px;
-    border: none;
-    cursor: pointer;
-}
+
 
 .dropdown {
     position: relative;
@@ -58,13 +50,24 @@ body {
 
 .dropdown:hover .dropdown-content {
     display: block;
-    
+
 }
 
 .dropdown:hover .dropbtn {
     background-color: #3e8e41;
      
 }
+ @media only screen and (max-width: 480px){
+dropbtn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 6px;
+    font-size: 6px;
+    border: none;
+    cursor: pointer;
+}
+}
+
 
 #header {
     background-color:black;
