--- a/styles/main.css
+++ b/styles/main.css
@@ -59,7 +59,17 @@ body {
      
 }
  
-
+@media only screen and (max-width: 480px)
+{
+dropbtn {
+    background-color: #4CAF50;
+    color: white;
+    padding:8px;
+    font-size: 6px;
+    border: none;
+    cursor: pointer;
+}
+}
 
 #header {
     background-color:black;
@@ -205,13 +215,3 @@ margin-top:40px;
     100% {color: red;}
 }
 
-@media only screen and (max-width: 480px)
-{
-dropbtn {
-    background-color: #4CAF50;
-    color: white;
-    padding: 8px;
-    font-size: 6px;
-    border: none;
-    cursor: pointer;
-}}
