--- a/styles/main.css
+++ b/styles/main.css
@@ -8,8 +8,7 @@ body {
   height:auto;
 
 }
-  
-
+<!-- Dropdown menubar------ -->
 .dropbtn {
     background-color: #4CAF50;
     color: white;
@@ -18,7 +17,6 @@ body {
     border: none;
     cursor: pointer;
 }
-
 
 .dropdown {
     position: relative;
@@ -58,7 +56,7 @@ body {
     background-color: #3e8e41;
      
 }
- 
+ <!-- Dropdown menubar-responsive -->
 @media only screen and (max-width:480px)
 {
 .dropbtn {
@@ -83,7 +81,7 @@ body {
 }
 
 
-
+ <!-- Header -->
 #header {
     background-color:black;
     color:white;
@@ -91,6 +89,7 @@ body {
     padding:5px;
 
 }
+ <!-- Link list -->
  li{
   list-style-type: none; 
    color:#00ff00;
@@ -117,6 +116,7 @@ list-style-type: none;
   text-decoration: none;
    color:#00ff00;
  }
+
 #nav1{
   float:right;
   margin-right: 20px;
@@ -149,7 +149,6 @@ color:#BC8F8F;
   left:0;
   width:100%;
 }
-
 #section1
 {
   
@@ -174,7 +173,6 @@ margin-top:100px;
 text-align: center;
 text-indent:50px;
 }
-
 #p1
 {
  text-align: center;
@@ -199,6 +197,7 @@ margin-top:40px;
  width:100%;
  float:left;
 }
+ <!-- Animation -->
 #division1
 {
 
