--- a/styles/main.css
+++ b/styles/main.css
@@ -58,7 +58,17 @@ body {
     background-color: #3e8e41;
      
 }
- 
+@media only screen and (max-width:300px)
+{
+.dropbtn {
+
+    background-color: #4CAF50;
+    color: white;
+    padding:5px;
+    font-size:6px;
+    border: none;
+    cursor: pointer;}
+}
 @media only screen and (max-width:480px)
 {
 .dropbtn {
