--- a/styles/main.css
+++ b/styles/main.css
@@ -86,6 +86,7 @@ body {
 
     background-color: #4CAF50;
     color: white;
+    height:5px;
     padding:6px;
     font-size:8px;
     border: none;
