--- a/styles/main.css
+++ b/styles/main.css
@@ -93,7 +93,13 @@ body {
     cursor: pointer;}
 }
 
+ul #footer-nav li
+{
+  display:inline;
+}
 
+
+}
 
 #header {
     background-color:black;
@@ -128,7 +134,7 @@ list-style-type: none;
   text-decoration: none;
    color:#00ff00;
  }
-#nav1{
+#index-footer{
   float:right;
   margin-right: 20px;
   
