--- a/styles/main.css
+++ b/styles/main.css
@@ -1,18 +1,18 @@
 
 
 
-
 body {
 
   background-color:white;
+  background-repeat:no-repeat;
+  background-position: center;
   background-size:cover;
   max-width: 100%;
   height:auto;
 
 }
-/*-------Contents--------*/
   
-/*--------Dropdown menu--------*/
+
 .dropbtn {
     background-color: #4CAF50;
     color: white;
@@ -22,10 +22,12 @@ body {
     cursor: pointer;
 }
 
+
 .dropdown {
     position: relative;
     display: inline-block;
     padding:1px;
+
 }
 
 .dropdown-content {
@@ -59,7 +61,17 @@ body {
     background-color: #3e8e41;
      
 }
-/*--------Media Queries--------*/
+@media only screen and (max-width:300px)
+{
+.dropbtn {
+
+    background-color: #4CAF50;
+    color: white;
+    padding:5px;
+    font-size:6px;
+    border: none;
+    cursor: pointer;}
+}
 @media only screen and (max-width:480px)
 {
 .dropbtn {
@@ -88,7 +100,7 @@ ul#footer-nav li
 {
   display:inline;
 }
-/*--------Page Header--------*/
+
 .page-heading {
    
     text-align:center;
@@ -108,7 +120,6 @@ ul#footer-nav li
     padding:5px;
 
 }
-/*--------Image--------*/
 #flex-img
 {
  position:absolute; 
@@ -121,7 +132,6 @@ ul#footer-nav li
  font-size:50px;
  text-align: center;
 }
-/*--------Navigation list--------*/
  li{
   list-style-type: none; 
    color:#00ff00;
@@ -148,18 +158,16 @@ list-style-type: none;
   text-decoration: none;
    color:#00ff00;
  }
- /*--------Footer--------*/
 #index-footer{
   float:right;
   margin-right: 20px;
   
 }
-/*--------Section--------*/
 #section
 {
   padding:10px;
 }
-.section-image
+.img1
 {
   height:510px;
   margin-right:200px;
@@ -167,6 +175,9 @@ list-style-type: none;
 float:left;
 position:relative;
 }
+
+
+
 #section1
 {
   
@@ -212,18 +223,11 @@ font-size: 15px;
 position:relative;
 margin-top:40px;  
 }
-#section-link{
-position:absolute;
-top:150px; 
-left:0px;
-width:100%;
-height:50px; 
-float:left;
-text-align:center;
-font-size: 40px;
+#division{
+ width:100%;
+ float:left;
 }
-/*------  Animation--------*/
-#home-page-animate
+#division1
 {
 
    color: #00ff00;
