--- a/styles/main.css
+++ b/styles/main.css
@@ -96,14 +96,14 @@ Content
     padding:5px;
 
 }
-.index-header{
+header.index-header{
      background-color:black;
     color:white;
     text-align:center;
     padding:5px;
 
 }
-.blog-header{
+header.blog-header{
      background-color:black;
     color:white;
     text-align:center;
@@ -119,7 +119,7 @@ Content
  width:100%;
  height:100px;
  float:left;
- font-size:30px;
+ font-size:40px;
  text-align: center;
 }
 /*------ List---------*/
@@ -150,11 +150,11 @@ list-style-type: none;
    color:#00ff00;
  }
  /*------ Footer---------*/
-.index-footer{
+footer.index-footer{
   float:right;
   margin-right: 20px;
 }
-.blog-footer{
+footer.blog-footer{
   float:right;
   margin-right: 20px; 
 }
@@ -193,7 +193,7 @@ margin-top:100px;
 text-align: center;
 text-indent:50px;
 }
-.index-section
+section.index-section
 {
 clear:both;
 text-align: center;
@@ -201,7 +201,7 @@ font-size: 15px;
 position:relative;
 margin-top:40px;
 }
-.section-link{
+section.section-link{
 clear:both;
 text-align: center;
 position:relative;
