--- a/styles/main.css
+++ b/styles/main.css
@@ -198,7 +198,7 @@ margin-top:100px;
 text-align: center;
 text-indent:50px;
 }
-section.index-section
+.index-section
 {
 clear:both;
 text-align: center;
@@ -206,16 +206,21 @@ font-size: 15px;
 position:relative;
 margin-top:40px;
 }
-section.section-link{
+.section-link{
 clear:both;
 text-align: center;
 position:relative;
 margin-top:40px;  
 }
 .section-top{
- width:100%;
- float:left;
- font-size: 15px;
+position:absolute;
+top:150px;
+left:0px;
+height:50px;
+float:left;
+font-size:30px;
+width:100%;
+ 
 }
 
  /*------ Animation---------*/
