--- a/styles/main.css
+++ b/styles/main.css
@@ -222,6 +222,14 @@ font-size:30px;
 width:100%;
  
 }
+/*------ Media icon---------*/
+#media-icon
+{
+  
+  width:50;
+  height:50;
+
+}
 
  /*------ Animation---------*/
 
